adding libgit2 sample.
Reviewed-by: mcimadamore